# m365check

./: Cargo.toml  LICENSE  README.md
src/: main.rs
