[package]
name = "m365check"
description = "An easy to use, lighweight Microsoft 365 Account checker for use by red teams"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/affix/m365check"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
colored = "2.0.4"
reqwest = {version = "0.11.22", features = ["json", "blocking"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"

